--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,4 @@ archives_base_name    = brighter-economy
 fabric_version        = 0.92.0+1.20.1
 # https://modrinth.com/mod/owo-lib/versions?l=fabric
 owo_version           = 0.11.2+1.20
+ktor_version          = 2.3.8
