--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'fabric-loom' version '1.5-SNAPSHOT'
     id 'maven-publish'
     id "org.jetbrains.kotlin.jvm" version "1.9.22"
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.9.22'
 }
 
 version = project.mod_version
@@ -28,6 +29,11 @@ dependencies {
 
     modImplementation "io.wispforest:owo-lib:${project.owo_version}"
     include "io.wispforest:owo-sentinel:${project.owo_version}"
+    annotationProcessor modImplementation("io.wispforest:owo-lib:${project.owo_version}")
+
+    implementation "io.ktor:ktor-server-netty:${project.ktor_version}"
+    implementation "io.ktor:ktor-server-content-negotiation:${project.ktor_version}"
+    implementation "io.ktor:ktor-serialization-kotlinx-json:${project.ktor_version}"
 }
 
 processResources {
@@ -49,10 +55,7 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
 }
 
 java {
-    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-    // if it is present.
-    // If you remove this line, sources will not be generated.
-    withSourcesJar()
+//    withSourcesJar()
 
     sourceCompatibility = JavaVersion.VERSION_17
     targetCompatibility = JavaVersion.VERSION_17
